--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <h2>等待你们的好消息   自信  察言观色    找到自己的擅长 vue - react - angular4.0  </h2>
 
-    <h2>1806 fighting 拼到最后 beibeibei </h2>
+    <h2>1806 fighting 拼到最后 beibeibei  hello  hello </h2>
 
     
 </body>
